== 2.7.11 ==
Release date: October 17, 2023
* Fixed: Animated Gradient Background - Animation was not working with flex containers

== 2.7.10 ==
Release date: September 20, 2023
* Enhancement: Instagram Feed - Added conditional loading of scripts
* Fixed: Info Grid & Carousel - Visible Items option was not working in Elementor editor
* Fixed: Info Grid & Carousel - JS error was showing when grid layout is selected
* Fixed: Advanced Accordion - Issue with toggle icon when item is set as active by default

== 2.7.9 ==
Release date: August 1, 2023
* Fixed: Compatibility issues with Elementor 3.15.0

== 2.7.8 ==
Release date: July 11, 2023
* Enhancement: WP Forms - Updated labels text color selector
* Enhancement: Removed CSS & JS related to slick slider
* Fixed: Team Member Carousel - Images were not appearing in the editor
* Fixed: Team Member Carousel - Arrow style options were not working
* Fixed: Info Box Carousel - Images were not appearing in the editor
* Fixed: Logo Carousel - Pagination dots styling options were not working

== 2.7.7 ==
Release date: June 21, 2023
* Enhancement: WP Forms - Added page break style options
* Enhancement: Disabled AI support for irrelevant controls
* Fixed: Compatibility issues with Elementor 3.14.0
* Fixed: Content Ticker - Position of arrows

== 2.7.6 ==
Release date: May 29, 2023
* Enhancement: Content Reveal - Added Default State option to show revealed content on page load
* Enhancement: Content Reveal - Reveal button hides when number of lines of content is less than the visible lines set in the settings
* Enhancement: Image Accordion - Added option to disable body click action
* Fixed: Logo Carousel - Arrows style options were not working

== 2.7.5 ==
Release date: May 2, 2023
* Enhancement: Added compatibility for Swiper v8.45
* Fixed: Info Grid & Carousel - Equal height option
* Fixed: Content Reveal - Compatibility with WPML
* Fixed: Editor - PowerPack add template button icon issue

== 2.7.4 ==